--- a/products.html
+++ b/products.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h1>Welcome to our store!</h1>
-<p>Check out our products below.</p>
+<p>Please check out our new products below.</p>
 </body>
 </html>
