--- a/products.html
+++ b/products.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h1>Welcome to our store!</h1>
-<p>Please check out our new products below.</p>
+<p>Please check out our new products below.<br>1. IPhone1 15<br>2. IPhone 15plus<br>3. IPhone 15pro<br>4. IPhone 15promax</p>
 </body>
 </html>
